# CppStu

./: CMakeLists.txt
src/include/: Integer.cpp  Integer.h  LandOwner.cpp  LandOwner.h  Student.cpp  Student.h
src/main/: main.cpp
